crates/tokmd-analysis-format/tests/snapshots/snapshot_golden__md_minimal.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_golden.rs
assertion_line: 275
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
