crates/tokmd-analysis-format/tests/snapshots/snapshot_golden__md_with_derived.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_golden.rs
assertion_line: 283
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Totals

|Files|Code|Comments|Blanks|Lines|Bytes|Tokens|
|---:|---:|---:|---:|---:|---:|---:|
|5|500|80|40|620|5000|1200|

## Ratios

|Metric|Value|
|---|---:|
|Doc density|13.8%|
|Whitespace ratio|6.5%|
|Bytes per line|8.06|

### Doc density by language

|Lang|Doc%|Comments|Code|
|---|---:|---:|---:|

### Whitespace ratio by language

|Lang|Blank%|Blanks|Code+Comments|
|---|---:|---:|---:|

### Verbosity by language

|Lang|Bytes/Line|Bytes|Lines|
|---|---:|---:|---:|

## Distribution

|Count|Min|Max|Mean|Median|P90|P99|Gini|
|---:|---:|---:|---:|---:|---:|---:|---:|
|5|25|245|124.00|100.00|245.00|245.00|0.3200|

## File size histogram

|Bucket|Min|Max|Files|Pct|
|---|---:|---:|---:|---:|
|Small|0|100|3|60.0%|
|Medium|101|500|2|40.0%|

## Top offenders

### Largest files by lines

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|
|src/main.rs|Rust|245|200|2000|500|13.0%|8.16|

### Largest files by tokens

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|

### Largest files by bytes

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|

### Least documented (min LOC)

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|

### Most dense (bytes/line)

|Path|Lang|Lines|Code|Bytes|Tokens|Doc%|B/Line|
|---|---|---:|---:|---:|---:|---:|---:|

## Structure

- Max depth: `4`
- Avg depth: `2.00`

## Test density

- Test lines: `100`
- Prod lines: `400`
- Test ratio: `25.0%`

## Boilerplate ratio

- Infra lines: `50`
- Logic lines: `570`
- Infra ratio: `8.8%`

## Polyglot

- Languages: `2`
- Dominant: `Rust` (90.0%)
- Entropy: `0.7200`

## Reading time

- Minutes: `31.00` (20 lines/min)

## Integrity

- Hash: `aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa` (`blake3`)
- Entries: `5`
