crates/tokmd-analysis-format/tests/snapshots/snapshot_golden__tree_minimal.snap
---
source: crates/tokmd-analysis-format/tests/snapshot_golden.rs
assertion_line: 368
expression: out
---
(tree unavailable)
